// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`smaller components renders AcceptedEmptyState correctly 1`] = `
<div
  class="dashboard-placeholder"
>
  <p>
    No devices found
  </p>
</div>
`;

exports[`smaller components renders DeviceCreationTime correctly 1`] = `-`;

exports[`smaller components renders DeviceExpansion correctly 1`] = `
.emotion-0 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 1em;
  height: 1em;
  display: inline-block;
  fill: currentColor;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  font-size: 1.5rem;
}

<div
  class="bold flexbox center-aligned link-color margin-right-small uppercased"
  style="white-space: nowrap;"
>
  view details 
  <svg
    aria-hidden="true"
    class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium emotion-0"
    data-testid="ArrowRightAltIcon"
    focusable="false"
    viewBox="0 0 24 24"
  >
    <path
      d="M16.01 11H4v2h12.01v3L20 12l-3.99-4z"
    />
  </svg>
</div>
`;

exports[`smaller components renders DeviceStatusHeading correctly 1`] = `<div />`;

exports[`smaller components renders PendingEmptyState correctly 1`] = `
<div
  class="dashboard-placeholder"
>
  <p>
    There are no devices pending authorization
  </p>
  <p>
    Visit the 
    <a
      href="/help/get-started"
    >
      Help section
    </a>
     to learn how to connect devices to the Mender server.
  </p>
</div>
`;

exports[`smaller components renders PreauthorizedEmptyState correctly 1`] = `
<div
  class="dashboard-placeholder"
>
  <p>
    There are no preauthorized devices.
  </p>
  <p>
    Preauthorize devices
     so that when they come online, they will connect to the server immediately
  </p>
  <img
    alt="preauthorize"
    src="preauthorize.png"
  />
</div>
`;

exports[`smaller components renders RejectedEmptyState correctly 1`] = `
<div
  class="dashboard-placeholder"
>
  <p>
    There are no rejected devices
  </p>
</div>
`;

exports[`smaller components renders RelativeDeviceTime correctly 1`] = `
<span
  aria-label=""
  class=""
  data-mui-internal-clone-element="true"
>
  <div>
    -
  </div>
</span>
`;
